[package]
name = "opm"
version = "0.1.0"
authors = ["Piper McCorkle <piperswe@gmail.com>"]
edition = "2018"

[lib]
name = "opm"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
stdweb = "0.4.20"
yew = "0.10.0"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true